--- a/src/pages/Login/style.module.css
+++ b/src/pages/Login/style.module.css
@@ -8,6 +8,7 @@
 .login_button {
     margin-top: 30px;
     margin-bottom: 20px;
+    width: 100%;
 }
 
 .login_input {
@@ -17,11 +18,33 @@
 }
 
 .login_bottom{
+    color: black;
     display: flex;
+    min-height: 150px;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     gap: 5px;
+}
+
+.oath{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    max-width: 800px;
+}
+
+.oath_elem {
+    font-size: 40px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
+.login_header{
+    display: flex;
+    justify-content: center;
+    font-size: 30px;
 }
 
 .login_top{
@@ -33,5 +56,6 @@
 }
 
 .image_logo{
-    max-width: 120px;
+    width: 180px;
+    margin-bottom: 20px;
 }
