--- a/src/pages/Register/style.module.css
+++ b/src/pages/Register/style.module.css
@@ -18,10 +18,17 @@
 
 .login_bottom{
     display: flex;
+    min-height: 150px;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     gap: 5px;
+}
+
+.login_header{
+    display: flex;
+    justify-content: center;
+    font-size: 30px;
 }
 
 .login_top{
@@ -33,5 +40,6 @@
 }
 
 .image_logo{
-    max-width: 120px;
+    width: 180px;
+    margin-bottom: 20px;
 }
